--- a/static/css/global.css
+++ b/static/css/global.css
@@ -6,6 +6,8 @@
 .loginPage > [class *="Area"]{padding: 200px 0 70px;}
 .myPage > [class *="Area"]{padding: 200px 0 70px;}
 .oneRoomPage > [class *="Area"]:not(.oneRoomArea){padding: 130px 0 70px;}
+.usedTradePage > [class *="Area"]{padding: 160px 0 70px;}
+.communityPage > [class *="Area"]{padding: 130px 0 70px;}
 
 .hidden{height: 0.001px; overflow: hidden;}
 
@@ -14,6 +16,24 @@ mark > *{color: #ff9900;}
 
 .blackBtn{display: block; margin: 0 auto; width: 125px; line-height: 45px; background-color: black; font-size: 18px; font-weight: 800; color: white; text-align: center;}
 [class*="material-icons-outlined"]{font-family: 'Material Icons';}
+
+/* 작성 버튼 */
+.writeBtn{display: flex; justify-content: center; align-items: center; width: 125px; height: 45px; border: 1px solid #d2d2d2; position: absolute; right: 0; top: -9px; font-size: 18px; font-weight: 700; color: #888888;}
+.writeBtn::before{content: ''; width: 26px; height: 20px; background: url('../images/oneroom_detailBtn03.png') no-repeat center / cover; margin-right: 10px;}
+/* form 버튼 */
+.formBtn{display: flex; justify-content: center;}
+.formBtn input:not(:last-of-type){margin-right: 10px;}
+.formBtn input{width: 125px; height: 45px; display: flex; justify-content: center; align-items: center; font-size: 18px; font-weight: 700;}
+.formBtn input[type="reset"]{border: 1px solid #d2d2d2; color: #888888; background-color: transparent;}
+.formBtn input[type="submit"]{background-color: black; color: white;}
+
+
+/* 검색 */
+.seachBox{position: relative; height: 45px; width: 323px;}
+.seachBox input{width: 100%;  height: 100%; border: 2px solid #ff9900; box-sizing: border-box;}
+.seachBox button{position: absolute; top:12px; right: 11px; width: 19px; height: 19px; background: url('../images/oneroom_search.png') no-repeat center / cover; text-indent: -9999px;}
+
+
 
 /* 페이저 */
 .pageBox{display: flex; justify-content: center; align-items: center; margin-top: 20px;}
@@ -27,6 +47,32 @@ mark > *{color: #ff9900;}
 .pageBox ol li a:hover::after,
 .pageBox ol li.active a::after{content: ''; position: absolute; left: 0; bottom: -5px; width: 100%; height: 2px; background-color: #ff9900;}
 
+
+/* 사이드 컨텐츠 */
+.asideBox::after{content: ''; display: block; clear: both;}
+.asideBox .leftContArea{float: left; width: 890px; margin-right: 30px;}
+.asideBox aside{float: left; width: 280px;}
+
+[class*="Page"]:not(.communityPage) .asideBox .leftContArea > *{margin-bottom: 80px;}
+.mainPage .asideBox .leftContArea > div > *:not(:first-child){margin-top: 10px;}
+
+.asideBox aside .mainSideBanner img{width: 100%;}
+
+.asideBox aside .boardArea > *:not(:last-child){margin-bottom: 10px;}
+.asideBox aside .boardArea > *{padding: 30px 20px 20px; box-sizing: border-box;}
+.asideBox aside .boardArea strong{display: flex; justify-content: space-between; font-size: 22px; font-weight: 800; margin-bottom: 30px;}
+
+/* 사이드 컨텐츠 - subPage */
+.subPage aside .boardArea ul li a{ display: block; position: relative;}
+.subPage aside .boardArea ul li:not(:last-child) a{padding-bottom: 20px; border-bottom: 1px solid #efefef;}
+.subPage aside .boardArea ul li:not(:first-child) a{padding-top: 20px;}
+.subPage aside .boardArea ul li a b{display: block; font-weight: 700; margin-bottom: 10px;}
+.subPage aside .boardArea ul li a b span{display: block; font-size: 14px; font-weight: 400; margin: 10px 0 15px; }
+.subPage aside .boardArea ul li a p{font-size: 14px; line-height: 20px; color: #888888;}
+.subPage aside .boardArea ul li a .iconBox{position: absolute; right: 0; bottom: 20px;}
+
+
+
 /* 이미지 업로드 공통 */
 .imgRegiBox > .fileArea{display: flex; flex-wrap: wrap;}
 .imgRegiBox > .fileArea > *{}
@@ -35,6 +81,34 @@ mark > *{color: #ff9900;}
 .imgRegiBox > .fileArea label{display: flex; justify-content: center; align-items: center; color: #ababab; font-weight: 900; background-color: #f5f5f5;}
 .imgRegiBox > .fileArea .imgBox{position: relative;}
 .imgRegiBox > .fileArea .imgBox .removeBtn{position: absolute; right: -6px; top: -6px; width: 20px; line-height: 20px; text-align: center; background-color: black; border-radius: 100%; font-size: 20px; color: white; font-weight: 900;}
+
+/* 중고거래 리스트*/
+.usedTradeBox{display: flex; flex-wrap: wrap; justify-content: space-between;}
+.usedTradeBox li a{width: 100%; margin-bottom: 20px;}
+.usedTradeBox li a .imgBox{width: 100%; margin-bottom: 20px;}
+
+/* 댓글 */
+.userBox{display: flex;}
+.userBox > .imgBox{width: 45px; height: 45px; border-radius: 100%; border: 1px solid #b9b9b9; box-sizing: border-box;}
+.userBox .textArea{flex: 1;display: flex; flex-wrap: wrap; align-items: center; align-content: space-between; margin: 0 15px; padding: 5px 0; box-sizing: border-box;}
+.userBox .textArea b{font-weight: 700;}
+.userBox .textArea small{width: 100%; font-size: 14px; color: #888888;}
+.userBox.sellerArea .textArea time{font-size: 14px; color: #555555; margin-left: 13px;}
+.userBox .textArea p{width: 100%;}
+
+.commentBox strong{display: block; font-size: 18px; font-weight: 800; padding-top: 20px;}
+.commentBox .userBox img{align-self: flex-start; padding: 17px 19px 0 38px;}
+.commentBox .userBox{flex-wrap: wrap; padding: 20px 0;}
+.commentBox .userBox:not(:last-of-type){border-bottom: 1px solid #ebebeb;}
+.commentBox .userBox .textArea b{margin-bottom: 10px;}
+.commentBox .userBox .textArea > div{margin-top: 15px; display: flex; align-items: center;}
+.commentBox .userBox .textArea > div time{width: 100%; font-size: 14px; color: #888888; }
+
+/* 등록 */
+.enrollmentBox{position: relative; margin-top: 40px;}
+.enrollmentBox b{position: absolute; left: 20px; top: 20px; font-weight: 700;}
+.enrollmentBox textarea{resize: none; width: 100%; height: 175px; padding: 50px 20px; box-sizing: border-box; border: 1px solid #e0e0e0; color: #888888;}
+.enrollmentBox button{position: absolute; right: 20px; bottom: 20px; font-weight: 700;}
 
 
 /* 팝업 */
@@ -82,6 +156,21 @@ mark > *{color: #ff9900;}
 .mail_icon{background-image: url('../images/mailIcon.png'); position: relative;}
 .mail_icon[data-count]::after{content: attr(data-count); position: absolute; right: -10px; top: -7px; width: 20px; height: 20px; background-color: #ff9900; border: 2px solid white; border-radius: 100%; display: flex; justify-content: center; align-items: center; text-indent: 0; font-size: 11px; font-weight: 900;}
 
+
+/* 아이콘 박스 */
+.iconBox{display: flex; align-items: center;}
+.iconBox span.material-icons-outlined{font-size: 22px;}
+.iconBox .imgBox{cursor: pointer;}
+.iconBox .imgBox.heartIcon{width: 22px; height: 19px; background-image: url('../images/heartIcon.png');}
+.iconBox .imgBox.heartIcon.active{background-image: url('../images/heartIcon_active.png');}
+.iconBox .imgBox.mailIcon{width: 18px; height: 18px; background-image: url('../images/mailIcon02.png');}
+.iconBox .imgBox.commentIcon{width: 21px; height: 20px; background-image: url('../images/commentIcon.png');}
+.iconBox .imgBox.upIcon{width: 18px; height: 19px; background-image: url('../images/upIcon.png');}
+.iconBox .imgBox.downIcon{width: 18px; height: 19px; background-image: url('../images/downIcon.png');}
+.iconBox span:not(.material-icons-outlined){font-size: 14px; margin-left: 5px;}
+.iconBox span:not(.material-icons-outlined):not(:last-child){margin-right: 15px;}
+
+/* 메뉴 포인트 */
 .point::after{content: ''; width: 5px; height: 5px; background-color: #46ccbb; border-radius: 100%; display: inline-block; vertical-align: text-top; margin-left: 8px;}
 .bold{font-weight: 800; display: flex; align-items: center;}
 
