--- a/templates/터치웹 PC 2021-11-23/css/page.css
+++ b/templates/터치웹 PC 2021-11-23/css/page.css
@@ -1,94 +1,10 @@
-/*.mainPage .borderBox{ border: 1px solid #cccccc;}*/
-/*.mainPage .paddingBox{padding: 30px 20px; box-sizing: border-box;}*/
-.borderBox{ border: 1px solid #cccccc;}
-.paddingBox{padding: 30px 20px; box-sizing: border-box;}
-
-.imgBox{background-repeat: no-repeat; background-size: cover; background-position: center; text-indent: -9999px;}
-
-.fontCase01 strong{display: block; font-size: 20px; font-weight: 800; margin-bottom: 15px;}
-.fontCase01 small{display: inline-block; font-size: 14px; font-weight: 700; color: #888888; margin-left: 5px;}
-.fontCase01 p{font-size: 16px; line-height: 24px;}
-.fontCase01 time{display: block; font-size: 12px; color: #888888;}
-
-.hoverEvent li:hover p{color: #ff9900; text-decoration: underline;}
-.hoverEvent li:hover p time{text-decoration: none;}
-
-
-.mainPage section h2{font-size: 26px; font-weight: 800; margin-bottom: 20px;}
-
-.mainPage .contArea::after{content: ''; display: block; clear: both;}
-.mainPage .contArea .leftContArea{float: left; width: 890px; margin-right: 30px;}
-.mainPage .contArea aside{float: left; width: 280px;}
-
-.mainPage .contArea .leftContArea > *{margin-bottom: 80px;}
-.mainPage .contArea .leftContArea > div > *:not(:first-child){margin-top: 10px;}
-
-/* 메인 베너 */
-.mainBanner{position: relative; line-height: 0;}
-.mainBanner img{width: 100%;}
-.mainBanner a{position: absolute; right: 0; bottom: 0; width: 205px; height: 55px; line-height: 1; background-color: black; padding: 0 20px 0 25px; box-sizing: border-box; color: white; display: flex; justify-content: space-between; align-items: center; font-size: 20px; font-weight: 700;}
-
-/* 메인 게시판 */
-.leftContArea .boardArea{display: flex; flex-wrap: wrap; justify-content: space-between;}
-.leftContArea .boardArea > div:not(:first-child){margin-top: 10px;}
-.leftContArea .boardArea > div strong{display: block; font-size: 26px; font-weight: 800; margin-bottom: 35px; display: flex; justify-content: space-between; align-items: center;}
-.leftContArea .boardArea > div ul li a{font-size: 18px; display: flex; justify-content: space-between; align-items: center;}
-/* .leftContArea .boardArea > div ul li:hover a p{color: #ff9900; text-decoration: underline;} */
-.leftContArea .boardArea > div ul li a p{max-width: calc(100% - 75px); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
-.leftContArea .boardArea > div ul li a time{font-size: 16px; color: #888888;} 
-
-.leftContArea .boardArea > div.width100{width: 100%; position: relative;}
-.leftContArea .boardArea > div.width100::after{content: ''; position: absolute; left: calc(50% - 0.5px); top: 0; width: 1px; height: 100%; background-color: #f6f6f6;}
-.leftContArea .boardArea > div:not(.width100){width: 440px;}
-
-.leftContArea .boardArea > div.width100 ul{display: flex; flex-wrap: wrap; justify-content: space-between;}
-.leftContArea .boardArea > div.width100 ul li{width: calc((100% - 45px) / 2);}
-.leftContArea .boardArea > div.width100 ul li:not(:nth-child(-n + 2)){margin-top: 25px;}
-
-.leftContArea .boardArea > div:not(.width100) ul li:not(:first-child){margin-top: 25px;}
-
-
-/* 메인 탭 , 원룸 / 거래 */
-.tabArea .tabBtn{display: flex;}
-.tabArea .tabBtn li{flex: 1;}
-.tabArea .tabBtn li button{width: 100%; height: 60px; font-size: 26px; color: #a8a8a8; font-weight: 700; background-color: #f5f5f5; border-style: solid; border-color: #e0e0e0;}
-.tabArea .tabBtn li:nth-child(1) button{border-width: 1px 0 0 1px;}
-.tabArea .tabBtn li:nth-child(2) button{border-width: 1px 1px 0 0;}
-.tabArea .tabBtn li button.active{color: white; background-color: #ff9900; border-color: #ff9900;}
-
-.tabArea .tabContents{border: 1px solid #ff9900;}
-.tabArea .tabContents ul li:not(:last-child){margin-bottom: 10px;}
-.tabArea .tabContents ul li a{display: flex; align-items: center;}
-.tabArea .tabContents ul li a .imgBox{width: 200px; height: 135px; border: 1px solid #b8b8b8; margin-right: 25px; background-repeat: no-repeat; background-size: cover; background-position: center;}
-
-
-/* 메인 인기원룸 */
-.popularArea ul{display: flex; flex-wrap: wrap; justify-content: space-between;}
-.popularArea ul li{width: 440px;}
-.popularArea ul li:not(:nth-child(-n + 2)){margin-top: 10px;}
-.popularArea ul li a{display: flex; align-items: center; background-color:#f5f5f5;}
-.popularArea ul li a .imgBox{width: 200px; height: 135px; margin-right: 15px;}
-
-
-
 /* 메인 실시간 인기 중고 */
-.realTimeArea ul{display: flex; justify-content: space-between;}
-.realTimeArea ul li{width: 215px;}
-.realTimeArea ul li a{width: 100%; margin-bottom: 20px;}
-.realTimeArea ul li a .imgBox{width: 100%; height: 145px; margin-bottom: 20px;}
-.realTimeArea ul li > div{display: flex; align-items: center;}
-.realTimeArea ul li > div span.material-icons-outlined{font-size: 22px;}
-.realTimeArea ul li > div .imgBox{cursor: pointer;}
-.realTimeArea ul li > div .imgBox.heartIcon{width: 22px; height: 19px; background-image: url('../images/heartIcon.png');}
-.realTimeArea ul li > div .imgBox.heartIcon.active{background-image: url('../images/heartIcon_active.png');}
-.realTimeArea ul li > div .imgBox.mailIcon{width: 18px; height: 18px; background-image: url('../images/mailIcon02.png');}
-.realTimeArea ul li > div span:not(.material-icons-outlined){font-size: 14px; margin-left: 5px;}
-.realTimeArea ul li > div span:not(.material-icons-outlined):not(:last-child){margin-right: 15px;}
-
+.mainPage .usedTradeBox li{width: 215px;}
+.mainPage .usedTradeBox li a .imgBox{height: 145px;}
 
 
 /* 메인 사이드 */
-.mainPage aside > *:not(:last-child){margin-bottom: 30px;}
+aside > *:not(:last-child){margin-bottom: 30px;}
 
 .mainPage aside .mainLonginArea fieldset{padding: 20px; box-sizing: border-box; background-color: #f5f5f5;}
 .mainPage aside .mainLonginArea fieldset input{width: 100%; height: 50px; padding: 15px; border: 1px solid #555555; box-sizing: border-box;}
@@ -104,11 +20,6 @@
 .mainPage aside .mainLonginArea fieldset div a{color: #333333; position: relative;}
 .mainPage aside .mainLonginArea fieldset div a:not(:last-child)::after{content: ''; position: absolute; right: -20px; top: 0; width: 1px; height: 100%; background-color: #d2d2d2;}
 
-.mainPage aside .mainSideBanner img{width: 100%;}
-
-.mainPage aside .boardArea > *:not(:last-child){margin-bottom: 10px;}
-.mainPage aside .boardArea > *{padding: 30px 20px 20px; box-sizing: border-box;}
-.mainPage aside .boardArea strong{display: flex; justify-content: space-between; font-size: 22px; font-weight: 800; margin-bottom: 30px;}
 .mainPage aside .boardArea time{font-size: 14px; color: #888888;}
 .mainPage aside .boardArea p{width: calc(100% - 80px); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
 .mainPage aside .boardArea p time{display: block; margin-bottom: 10px;}
@@ -272,7 +183,8 @@
 /* 원룸 */
 
 .oneRoomArea{padding-top: 121px;}
-.oneRoomArea .contArea{ min-width: 1400px; height: calc((100vh - 121px)); display: flex;}
+.oneRoomArea .contArea{min-width: 1400px; height: calc((100vh - 121px)); display: flex;}
+
 
 /* 원룸 페이지 지도 */
 .oneRoomArea .contArea .mapArea{width: calc(100% - 720px); height: 100%; position: relative;}
@@ -280,16 +192,6 @@
 .oneRoomArea .contArea .mapArea .inputArea > button{width: 100px; height: 100%; border: 1px solid #d2d2d2; font-size: 18px; color: #888888; display: flex; justify-content: center; align-items: center; margin-left: 20px;}
 .oneRoomArea .contArea .mapArea .inputArea > button:nth-of-type(1)::before{content: ''; width: 21px; height: 17px; background: url('../images/oneroom_filter.png') no-repeat center / cover; margin-right: 17px;}
 .oneRoomArea .contArea .mapArea iframe{width: 100%; height: 100%;}
-
-/* 검색바 search_bar */
-.oneRoomArea .contArea .mapArea .inputArea{position: absolute; left: 15px; top: 20px; padding: 20px; height: 45px; background-color: white; border: 1px solid #dadada; display: flex; z-index: 2;}
-.oneRoomArea .contArea .mapArea .inputArea div{position: relative; height: 100%;}
-.oneRoomArea .contArea .mapArea .inputArea div input{width: 323px; height: 100%; border: 2px solid #ff9900; box-sizing: border-box;}
-.oneRoomArea .contArea .mapArea .inputArea div button{position: absolute; top:12px; right: 11px; width: 19px; height: 19px; background: url('../images/oneroom_search.png') no-repeat center / cover;}
-.oneRoomArea .contArea .mapArea .inputArea > button{width: 100px; height: 100%; border: 1px solid #d2d2d2; font-size: 18px; color: #888888; display: flex; justify-content: center; align-items: center; margin-left: 20px;}
-.oneRoomArea .contArea .mapArea .inputArea > button:nth-of-type(1)::before{content: ''; width: 21px; height: 17px; background: url('../images/oneroom_filter.png') no-repeat center / cover; margin-right: 17px;}
-/* iframe */
-.oneRoomArea .contArea .mapArea .myMap{width: 100%; height: 100%;}
 
 /* 원룸 페이지 리스트 공통 */
 .oneRoomArea .contArea .listArea{width: 720px; display: flex; flex-direction: column; position: relative;}
@@ -369,8 +271,6 @@
 
 /* 원룸 - 상세페이지 - 실거주자 리뷰 */
 .oneRoomPage .detailArea .reviewArea{position: relative;}
-.oneRoomPage .detailArea .reviewArea > button{display: flex; justify-content: center; align-items: center; width: 125px; height: 45px; border: 1px solid #d2d2d2; position: absolute; right: 0; top: -9px; font-size: 18px; font-weight: 700; color: #888888;}
-.oneRoomPage .detailArea .reviewArea > button::before{content: ''; width: 26px; height: 20px; background: url('../images/oneroom_detailBtn03.png') no-repeat center / cover;}
 .oneRoomPage .detailArea .reviewArea > ul{border: 1px solid #e0e0e0;}
 .oneRoomPage .detailArea .reviewArea > ul li{padding:20px 30px; background-color: #f5f5f5; display: flex; }
 .oneRoomPage .detailArea .reviewArea > ul li:not(:last-child){border-bottom: 1px solid #e0e0e0;}
@@ -421,7 +321,6 @@
 .oneRoomPage .registrationArea .inputArea .addrArea > label{width: 150px; line-height: 55px; color: #555555; background-color: #f0f0f0; border-right: 1px solid #e0e0e0; display: flex; justify-content: center; align-items: center;}
 .oneRoomPage .registrationArea .inputArea .addrArea > div{flex: 1; padding: 7px; background-color: #f5f5f5;  flex-wrap: wrap;}
 .oneRoomPage .registrationArea .inputArea .addrArea > div input{width: 400px; height: 40px; border: 1px solid #cacaca; padding: 0 10px;}
-.oneRoomPage .registrationArea .inputArea .addrArea > div div{}
 .oneRoomPage .registrationArea .inputArea .addrArea > div > *:not(:last-child){margin-bottom: 7px;}
 .oneRoomPage .registrationArea .inputArea .addrArea > div .topArea{display: flex;}
 .oneRoomPage .registrationArea .inputArea .addrArea > div .topArea button{width: 130px; height: 40px; background-color: black; color: white; margin-left: 5px;}
@@ -441,11 +340,7 @@
 .oneRoomPage .registrationArea .imgRegiBox + div{border-width: 0 1px 1px 1px; border-style: solid; border-color: #e0e0e0; padding: 30px 0; text-align: center;}
 .oneRoomPage .registrationArea .imgRegiBox + div input[type="checkbox"]{display: none;}
 .oneRoomPage .registrationArea .imgRegiBox + div label{display: block; margin-bottom: 30px;}
-.oneRoomPage .registrationArea .imgRegiBox + div div{display: flex; justify-content: center;}
-.oneRoomPage .registrationArea .imgRegiBox + div div input:not(:last-of-type){margin-right: 10px;}
-.oneRoomPage .registrationArea .imgRegiBox + div div input{width: 125px; height: 45px; display: flex; justify-content: center; align-items: center; font-size: 18px; font-weight: 700;}
-.oneRoomPage .registrationArea .imgRegiBox + div div input[type="reset"]{border: 1px solid #d2d2d2; color: #888888; background-color: transparent;}
-.oneRoomPage .registrationArea .imgRegiBox + div div input[type="submit"]{background-color: black; color: white;}
+
 
 
 
