--- a/templates/터치웹 PC 2021-11-23/css/reset.css
+++ b/templates/터치웹 PC 2021-11-23/css/reset.css
@@ -15,7 +15,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video,button ,input:not([type="password"]),input[type="password"]::placeholder{
+time, mark, audio, video,button ,input:not([type="password"]),input[type="password"]::placeholder , textarea{
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -49,6 +49,7 @@ table {
 	border-spacing: 0;
 }
 
+
 html {
     /* 글꼴 크기 조정 방지 */
    -webkit-text-size-adjust: none; /*Chrome, Safari, newer versions of Opera*/
@@ -63,16 +64,7 @@ a{text-decoration: none; color: black; display: inline-block;}
 
 button{background-color: transparent; border: none; cursor: pointer;}
 
-input[type="submit"], input[type="reset"]{cursor: pointer;}
-
-input[type="password"]{font-family: Serif}
-
-input:focus, select:focus { outline-color: #ff9900; }
-
-a:hover { color: #ff9900 }
-
-
-/**/
+input[type="submit"] , input[type="reset"]{cursor: pointer;}
 input[type="search"]::-ms-clear,
 input[type="search"]::-ms-reveal{
     display:none;
@@ -84,3 +76,5 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration{
     display:none;
 }
+
+
